--- a/templates/about.html
+++ b/templates/about.html
@@ -117,7 +117,7 @@
         <div class="section-title">
           <h2>ABOUT US </h2>
           <h3>Who  <span> We Are?</span></h3>
-          <p>We will provide you with outlined logistics and Artistes of your choice depending on your budget.  </p>
+          <p>Strong Skills International is one of the strongest and most skillful divers group in the United States.   </p>
         </div>
 
 
@@ -127,9 +127,9 @@
           </div> 
          
           <div class="video-section-half1" data-aos="fade-right" data-aos-offset="100">
-            <p>This tour designed by our team, is to help transform student entertainment events into a world class outcome capable of attracting top notch corporate brands and leaving patrons of these events highly satisfied. </p>
-            <p>Providing you with logistics depending on your outline thus, (stage, led light trusses, sound systems, etc.), and any Artiste of your choice depending on your budget.
-              This tour is most effective in their <span>SRC week celebration, hall week celebrations, Awards and Pageantry shows</span> desired by these institutions.</p>
+            <p>In a fast-moving and increasingly complex global economy, Strong Skills International success depends on how faithfully we adhere to our core principles: delivering exceptional client service; acting with integrity and responsibility; and supporting the growth of our employees.</p>
+            <p><b>Built on Principle:</b> <br>
+              Strong Skills International is one of the strongest and most skillful divers group in the United States. With a history dating back over a decade, here's where we stand today:</p>
             <a href="events.html" style="border:solid 2px; border-radius:30px; width:190px; padding:10px;" class="btn-learn-more">Explore More</a>
           </div>
         </div>
@@ -182,9 +182,12 @@
         <div class="text-center" >
           <div class="video-section">
             <div class="video-section-half1" data-aos="fade-right" data-aos-offset="100">
-              <h6 style="color:#fff; margin-bottom:10px; text-align:left; font-size:14px;">   Group President & Chief Executive</h6>
-              <h1 style="color:white;text-align:left;"><b>Mr. Kofi Anan</b></h1>
-              <h5 style="color:white; margin-bottom:10px; text-align:left;"> our approach to sustainability goes beyond<br> compliance with regulatory expectations.<br> We are driven by a desire to contribute to,<br> and positively impact the development of <br> the society.
+              <h6 style="color:#fff; margin-bottom:0; text-align:left; font-size:14px;">   Vision & Mission</h6>
+              <h1 style="color:white;text-align:left;"><b>Our Mission</b></h1>
+              <h5 style="color:white; margin-bottom:10px; text-align:left;"> We deliver strong services to our shareholders by selling high-quality products at affordable prices, backed by excellent customer service. <br>Help Nigerian and other countries towards a better living and self-sufficiency, by establishing efficient production facilities in strategic locations close to key growth markets.  
+                <br>   We provide economic benefits to local communities, by establishing efficient production facilities in strategic locations close to key growth markets.
+                <br> To provide economic benefits to local communities by way of direct and indirect employment in all countries in which we operate.  
+            
                 <div class="section-titl" style="display:flex;margin-top:30px;">
                     <h5  style="background-color:#fff;  height: 37px; text-align:center; color:#191970; width:100px;  border-radius:0;font-size:11px; padding:13px;">READ MORE</h5> 
                     <h2  style="background-color:#191970; height: 37px; width:40px; border-radius:0 5px 5px 0; color:#000;"></h2> 
@@ -194,10 +197,44 @@
               
             </div>
             <div class="video-section-half2" data-aos="fade-left" data-aos-offset="100">
-                <img src="" style="width: 700px; height:450px;        display: grid;
-                place-items: center;
-                margin: 0 auto;" alt="">
-               
+              <div class="card">
+                <div class="card">
+                  <div class="card-content">
+                    <div class="card-body">
+                      <div class="media d-flex">
+                        <div class="media-body text-left">
+                          <h3 class="danger">278+ </h3>
+                          <span>Growth Rate</span>
+                        </div>
+                        <div class="align-self-center">
+                          <i class="icon-rocket danger font-large-2 float-right"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            
+              
+              <div class="card">
+                <div class="card-content">
+                  <div class="card-body">
+                    <div class="media d-flex">
+                      <div class="align-self-center">
+                        <i class="icon-pointer danger font-large-2 float-left"></i>
+                      </div>
+                      <div class="media-body text-right">
+                        <h3>23</h3>
+                        <h3 class="danger">5+ </h3>
+                        <span>Countries reach</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+           
                </div> 
            
           </div>
@@ -216,7 +253,7 @@
     <div class="section-title" style="margin-top:50px;">
       <h2>OUR LEADERSHIP</h2>
       <h3>Executive <span> Leadership </span></h3>
-      <p>We believe in the concept of good customer service hence our vision to become the most efficient and influential business conglomerate in Africasss and beyond.</p>
+      <p>We believe in the concept of good customer service hence our vision to become the most efficient and influential business conglomerate in Africa and beyond.</p>
     </div> 
     <section class="preços-section" id="preços"> 
       <div class="produto1" data-aos="fade-up" data-aos-offset="250" data-aos="zoom-in" >
@@ -486,6 +523,81 @@
 
       </div>
     </section> -->   
+      <section id="cta" class="cta" >
+        <div class="container">
+          <div class="text-center" >
+            <div class="video-section">
+              <div class="video-section-half1" data-aos="fade-right" data-aos-offset="100">
+                <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;">   Vision</h6>
+                <h1 style="color:white;text-align:left;"><b> Over 10 Years of Thinking Big</b></h1>
+                <h5 style="color:white; margin-bottom:10px; text-align:left;"> 
+                 
+                  From helping provide affordable short term living. the plan to pioneering data-driven Philanthropy, Strong Skills international has a long history.   <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;"> <a href="" style="color:blue;">  See More -</a></h6>
+                </h5>
+                <h1 style="color:white;text-align:left;"><b>  Art Collection</b></h1>
+                <h5 style="color:white; margin-bottom:10px; text-align:left;">   Since its founding Strong Skills International has become one of the the most special collections creator in the world. Our mission is to connect clients, colleagues, and communities through art and the conversations it can start.</h5>
+                <h6 style="color:white; margin-bottom:10px; text-align:left; font-size:14px;"> <a href="" style="color:blue;">  See More -</a></h6>
+              </div>
+ 
+             <div class="video-section-half2" data-aos="fade-left" data-aos-offset="100">
+                <img src="" style="width: 100%;"class="img-fluid" alt="">
+
+
+                <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+                <link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/css/bootstrap-extended.min.css">
+                <link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/fonts/simple-line-icons/style.min.css">
+                <link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/css/colors.min.css">
+                <link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/css/bootstrap.min.css">
+                <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+                
+        <div class="card">
+          <div class="card-content">
+            <div class="card-body">
+              <div class="media d-flex">
+                <div class="media-body text-left">
+                  <h3 class="warning">89.89 %</h3>
+                  <span>10 Years of Experience</span>
+                </div>
+                <div class="align-self-center">
+                  
+                  <i class="icon-graph success font-large-2 float-left"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      
+        
+          <div class="card">
+            <div class="card-content">
+              <div class="card-body">
+                <div class="media d-flex">
+                  <div class="media-body text-left">
+                    <h3 class="warning">243+</h3>
+                    <span>Conversion Rate</span>
+                  </div>
+                  <div class="align-self-center">
+                    <i class="icon-pie-chart warning font-large-2 float-right"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+     
+       
+      
+                 </div> 
+            </div>
+  
+           <!--- <h3>Join our team</h3>
+            <p> We are looking to recruit like minded and passionate people who are looking at making the best of their skills, talents and outreach. We are warm family on a journey of growth. You would enjoy adding value.</p>
+            <a class="cta-btn" href="#">Contact us now.</a>
+          </div>-->
+  
+        </div>
+      </section>
     
     <!-- End Portfolio Section -->
 
